--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Martin Stenflo</h1>
-								<p>Software Engineer - Artist - Builder - Ecologist</p>
+								<p>Software - Science - Art - Ecology</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#intro">About</a></li>
+								<li><a href="#work">Projects</a></li>
+								<li><a href="#about">Art</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
