rephrase items in Art tab

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<article id="about">
 								<h2 class="major">Art</h2>
 								<p>Here are a few of my art peices. I mostly work with digital media, Illustrator, Photoshop, and the iPad Pro, using the apple pen with Procreate.
-									Much of my work have themes of cultural, political, and philosophical elements. 
+									Much of my work have themes of cultural, political, and philosophical elements, examining humans in their social landscapes. 
 								</p>
 								<h3 class="major">Boulder Bubble</h3>
 								<p>People living in Boulder Colorado are considered to be living in a political and cultural bubble, isolated
@@ -91,7 +91,9 @@
 								</p>
 								<span class="image main"><img src="images/BoulderBubble.jpg" alt="" /></span>
 								<h3 class="major">Persistant Illusion</h3>
-								<p>Created using Google's Deep Dream algorithm to analyze images, painting Einstein in the form of a fractal.</p>
+								<p>Created using Google's Deep Dream algorithm to analyze images. This dream recreates Einstein in the form of a fractal. It is part
+								of a deep dream series I did on Einstein.
+								</p>
 								<span class="image main"><img src="images/EinsteinFractal.jpg" alt="" /></span>
 								<h3 class="major">Silent Action series</h3>
 								<p>I created a set of digital watercolor paintings with the absence of humans in action. It represents anonymity
