--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 								</form>
 								<ul class="icons">
 									<li><a href="https://github.com/mstenflo" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/martin-stenflo-3140251a1/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
 
