--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="POST" action="process.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
