--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="POST" action="process.php">
+								<form action="http://formspree.io/xknqnoeo" method="POST">
+
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
