--- a/index.html
+++ b/index.html
@@ -124,12 +124,60 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
+									<p id="my-form-status"></p>
 								</form>
 								<ul class="icons">
 									<li><a href="https://github.com/mstenflo" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.linkedin.com/in/martin-stenflo-3140251a1/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</article>
+<script>
+	window.addEventListener("DOMContentLoaded", function () {
+
+		// get the form elements defined in your form HTML above
+
+		var form = document.getElementById("my-form");
+		var button = document.getElementById("my-form-button");
+		var status = document.getElementById("my-form-status");
+
+		// Success and Error functions for after the form is submitted
+
+		function success() {
+			form.reset();
+			button.style = "display: none ";
+			status.innerHTML = "Thanks!";
+		}
+
+		function error() {
+			status.innerHTML = "Oops! There was a problem.";
+		}
+
+		// handle the form submission event
+
+		form.addEventListener("submit", function (ev) {
+			ev.preventDefault();
+			var data = new FormData(form);
+			ajax(form.method, form.action, data, success, error);
+		});
+	});
+
+	// helper function for sending an AJAX request
+
+	function ajax(method, url, data, success, error) {
+		var xhr = new XMLHttpRequest();
+		xhr.open(method, url);
+		xhr.setRequestHeader("Accept", "application/json");
+		xhr.onreadystatechange = function () {
+			if (xhr.readyState !== XMLHttpRequest.DONE) return;
+			if (xhr.status === 200) {
+				success(xhr.response, xhr.responseType);
+			} else {
+				error(xhr.status, xhr.response, xhr.responseType);
+			}
+		};
+		xhr.send(data);
+	}
+</script>
 
 						<!-- Elements -->
 							<article id="elements">
