add algorithm link

--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Martin Stenflo</p>
+						<a href="algo.html">Algorithms</a>
 					</footer>
 
 			</div>
