--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Martin Stenflo</p>
-						<!-- <a href="algo.html">Algorithms</a> -->
+						<a href="https://algobase.herokuapp.com/">Algorithms</a>
 					</footer>
 
 			</div>
